--- a/bio.html
+++ b/bio.html
@@ -102,7 +102,7 @@
         <footer class="footer">
 
             <div class="footer__redes">
-                <a href="https://www.instagram.com/jeruncio.clown/"><svg xmlns="http://www.w3.org/2000/svg"
+                <a class="footer__redes--hover" href="https://www.instagram.com/jeruncio.clown/"><svg xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="36" height="36"
                         preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                         <g fill="none">
@@ -113,7 +113,7 @@
                     </svg>
                 </a>
 
-                <a href="https://www.facebook.com/PayasoJeruncioTerrible/"><svg xmlns="http://www.w3.org/2000/svg"
+                <a class="footer__redes--hover" href="https://www.facebook.com/PayasoJeruncioTerrible/"><svg xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="36" height="36"
                         preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 1000">
                         <path
