--- a/bio.html
+++ b/bio.html
@@ -71,33 +71,26 @@
 
     <div class="fondo fondo--bio">
 
-        <div class="container main">
+        <div class="container">
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2 class="titulo text-center mt-5">Jeremías Terribile</h2>
-                </div>
+            <div class="col-lg-6">
+                <h2 class="titulo text-center mt-5">Jeremías Terribile</h2>
             </div>
 
             <!-- Fin del titulo -->
 
-
-            <div class="row">
-                <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center">
-                    <p
-                        class="tarjetas__texto tarjetas__texto--bio animate__animated animate__fadeIn animate__delay-0.5s">
-                        De chico descubrió el malabarismo y de adolescente lo perfeccionó. Un viaje por Latinoamérica lo
-                        puso
-                        ante
-                        sus primeros espectadores en los semáforos.
-                        Desde el año 2016 investiga el clown en talleres, seminarios y en convenciones internacionales
-                        de
-                        circo,
-                        nutriéndose de maestrxs de diferentes partes del mundo.
-                    </p>
-                    <img class="habilidades__img mt-3" src="img/habilidades/clown-svgrepo-com.svg" height=100
-                        alt="clown">
-                </div>
+            <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center">
+                <p class="tarjetas__texto tarjetas__texto--bio animate__animated animate__fadeIn animate__delay-0.5s">
+                    De chico descubrió el malabarismo y de adolescente lo perfeccionó. Un viaje por Latinoamérica lo
+                    puso
+                    ante
+                    sus primeros espectadores en los semáforos.
+                    Desde el año 2016 investiga el clown en talleres, seminarios y en convenciones internacionales
+                    de
+                    circo,
+                    nutriéndose de maestrxs de diferentes partes del mundo.
+                </p>
+                <img class="habilidades__img mt-3" src="img/svg/clown-svgrepo-com.svg" height=100 alt="clown">
             </div>
 
             <div class="habilidades mt-5">
@@ -109,17 +102,17 @@
                 </div>
                 <div class="habilidades__contenedor--secundario">
                     <div class="habilidades__contenedor mb-5">
-                        <img class="habilidades__img" src="img/habilidades/bike-svgrepo-com.svg" alt="monociclo">
+                        <img class="habilidades__img" src="img/svg/bike-svgrepo-com.svg" alt="monociclo">
                         <p class="habilidades__texto text-center">Monociclo</p>
                     </div>
 
                     <div class="habilidades__contenedor mb-5">
-                        <img class="habilidades__img" src="img/habilidades/hat-svgrepo-com.svg" alt="animacion">
+                        <img class="habilidades__img" src="img/svg/hat-svgrepo-com.svg" alt="animacion">
                         <p class="habilidades__texto text-center">Animación</p>
                     </div>
 
                     <div class="habilidades__contenedor mb-5">
-                        <img class="habilidades__img" src="img/habilidades/juggling-svgrepo-com.svg" alt="malabares">
+                        <img class="habilidades__img" src="img/svg/juggling-svgrepo-com.svg" alt="malabares">
                         <p class="habilidades__texto text-center">Malabares</p>
                     </div>
                 </div>
