--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,7 @@
             <!-- Fin del titulo -->
 
             <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center">
-                <p class="tarjetas__texto tarjetas__texto--bio animate__animated animate__fadeIn animate__delay-0.5s">
+                <p class="tarjetas__texto animate__animated animate__fadeIn animate__delay-0.5s">
                     De chico descubrió el malabarismo y de adolescente lo perfeccionó. Un viaje por Latinoamérica lo
                     puso
                     ante
