--- a/bio.html
+++ b/bio.html
@@ -34,10 +34,11 @@
     <header class="header">
         <nav class="navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand navbar__logo enlace" href="index.html">
-                    <img src="img/logo.svg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <span class="enlace--transicion">Jeruncio Clown</span>
-                </a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.svg" alt="logo" width="30" height="24"
+                        class="d-inline-block align-text-top navbar__logo"></a>
+                <a class="enlace" href="index.html">Jeruncio Clown</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
