--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
 
     <!-- Animaciones -->
 
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -73,14 +73,14 @@
 
         <div class="container">
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 animate__animated animate__backInDown">
                 <h2 class="titulo text-center mt-5">Jeremías Terribile</h2>
             </div>
 
             <!-- Fin del titulo -->
 
-            <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center">
-                <p class="tarjetas__texto animate__animated animate__fadeIn animate__delay-0.5s">
+            <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center animate__animated animate__backInLeft">
+                <p class="tarjetas__texto">
                     De chico descubrió el malabarismo y de adolescente lo perfeccionó. Un viaje por Latinoamérica lo
                     puso
                     ante
@@ -93,7 +93,7 @@
                 <img class="habilidades__img mt-3" src="img/svg/clown-svgrepo-com.svg" height=100 alt="clown">
             </div>
 
-            <div class="habilidades mt-5">
+            <div class="habilidades mt-5 animate__animated animate__bounceInUp">
                 <div class="row habilidades__contenedor--principal">
                     <div class="col-lg-6">
                         <h3 class="titulo text-center mb-5">Habilidades de Jeruncio!</h3>
