--- a/bio.html
+++ b/bio.html
@@ -27,6 +27,10 @@
     <!-- Animaciones -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -71,16 +75,14 @@
 
     <div class="fondo fondo--bio">
 
-        <div class="container">
+        <div class="container pt-5">
 
             <div class="col-lg-6 animate__animated animate__backInDown">
-                <h2 class="titulo text-center mt-5">Jeremías Terribile</h2>
+                <h2 class="titulo text-center">Jeremías Terribile</h2>
             </div>
 
-            <!-- Fin del titulo -->
-
-            <div class="col-lg-6 tarjetas mt-5 tarjeta--bio text-center animate__animated animate__backInLeft">
-                <p class="tarjetas__texto">
+            <div class="col-lg-6 tarjetas mt-5 tarjetas--bio text-center animate__animated animate__backInLeft">
+                <p class="tarjetas--texto">
                     De chico descubrió el malabarismo y de adolescente lo perfeccionó. Un viaje por Latinoamérica lo
                     puso
                     ante
@@ -94,13 +96,13 @@
             </div>
 
             <div class="habilidades mt-5 animate__animated animate__bounceInUp">
-                <div class="row habilidades__contenedor--principal">
+                <div class="row">
                     <div class="col-lg-6">
                         <h3 class="titulo text-center mb-5">Habilidades de Jeruncio!</h3>
                     </div>
 
                 </div>
-                <div class="habilidades__contenedor--secundario">
+                <div>
                     <div class="habilidades__contenedor mb-5">
                         <p class="habilidades__texto text-center">Monociclo</p>
                         <img class="habilidades__img" src="img/svg/bike-svgrepo-com.svg" alt="monociclo">
@@ -115,12 +117,20 @@
                         <p class="habilidades__texto text-center">Malabares</p>
                         <img class="habilidades__img" src="img/svg/juggling-svgrepo-com.svg" alt="malabares">
                     </div>
+
+                    <div class="habilidades__contenedor mb-5">
+                        <img class="habilidades__img" src="img/svg/child-svgrepo-com.svg" alt="show niñes">
+                        <p class="habilidades__texto text-center">Shows para niñxs</p>
+                    </div>
+
+                    <div class="habilidades__contenedor mb-5">
+                        <p class="habilidades__texto text-center">Shows para grandes</p>
+                        <img class="habilidades__img" src="img/svg/crowd-people-group-public-svgrepo-com.svg" alt="show adulots">
+                    </div>
                 </div>
             </div>
 
         </div>
-
-
 
         <footer class="footer">
 
