--- a/bio.html
+++ b/bio.html
@@ -61,10 +61,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link enlace--menu" href="tecnica.html">Técnica</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link enlace--menu" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -78,7 +74,7 @@
         <div class="container pt-5">
 
             <div class="col-lg-6 animate__animated animate__backInDown">
-                <h2 class="titulo text-center">Jeremías Terribile</h2>
+                <h2 class="titulo text-center fondito">Jeremías Terribile</h2>
             </div>
 
             <div class="col-lg-6 tarjetas mt-5 tarjetas--bio text-center animate__animated animate__backInLeft">
@@ -98,35 +94,31 @@
             <div class="habilidades mt-5 animate__animated animate__bounceInUp">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h3 class="titulo text-center mb-5">Habilidades de Jeruncio!</h3>
+                        <h3 class="titulo fondito text-center mb-5">¿Qué hace Jeruncio?</h3>
                     </div>
 
                 </div>
                 <div>
+
                     <div class="habilidades__contenedor mb-5">
-                        <p class="habilidades__texto text-center">Monociclo</p>
+                        <img class="habilidades__img" src="img/svg/hat-svgrepo-com.svg" alt="animacion">
+                        <p class="habilidades__texto text-center">Animación para todo público</p>
+                    </div>
+
+                    <div class="habilidades__contenedor mb-5">
+                        <p class="habilidades__texto text-center">Performance</p>
                         <img class="habilidades__img" src="img/svg/bike-svgrepo-com.svg" alt="monociclo">
                     </div>
 
                     <div class="habilidades__contenedor mb-5">
-                        <img class="habilidades__img" src="img/svg/hat-svgrepo-com.svg" alt="animacion">
-                        <p class="habilidades__texto text-center">Animación</p>
-                    </div>
-
-                    <div class="habilidades__contenedor mb-5">
-                        <p class="habilidades__texto text-center">Malabares</p>
                         <img class="habilidades__img" src="img/svg/juggling-svgrepo-com.svg" alt="malabares">
+                        <p class="habilidades__texto text-center">Recepciones e intervenciones</p>
                     </div>
-
-                    <div class="habilidades__contenedor mb-5">
-                        <img class="habilidades__img" src="img/svg/child-svgrepo-com.svg" alt="show niñes">
-                        <p class="habilidades__texto text-center">Shows para niñxs</p>
-                    </div>
-
+                    <!-- 
                     <div class="habilidades__contenedor mb-5">
                         <p class="habilidades__texto text-center">Shows para grandes</p>
                         <img class="habilidades__img" src="img/svg/crowd-people-group-public-svgrepo-com.svg" alt="show adulots">
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
